# petdocs

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: manage.py  pyproject.toml
backend/accounts/: admin.py  forms.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/accounts/templates/registration/: login.html  register.html
backend/api/: admin.py  forms.py  models.py  services.py  storage.py  tests.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/api/templates/api/: document_form.html  pet_confirm_delete.html  pet_detail.html  pet_form.html  pet_list.html  sharelink_created.html  sharelink_expired.html  sharelink_form.html  sharelink_inactive.html  sharelink_view.html
backend/petdocs/: asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
